# poetry-example

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: poetry-qa.yml
poetry_example/: user.py
tests/: test_user.py
