[tool.poetry]
name = "poetry-example"
version = "0.1.0"
description = ""
authors = ["NicholasBehr <github.fc3r26vy@mailalias.me>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
black = "^24.4.2"
flake8 = "^7.0.0"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
